# agentic-ml-fraud-detection-platform

./: .env  .env.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: agents_decision.py  agents_detection.py  agents_investigation.py  agents_reporting.py  config.py  db.py  main.py  models.py  pipeline.py  repo.py  simulator.py
templates/: index.html
